# sentinel

./: .build.yml  .local.immudb.env  Dockerfile  Dockerfile copy  LICENSE  README.md  docker-compose.yml  hypercorn.toml  pyproject.toml  startup_script.sh
app/: main.py  models.py  settings.py
app/routes/: ingest.py
