[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = "Sentinel is an audit storage system"
authors = ["Oscar Carballal <oscar@lareira.digital>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
pytest = "*"
hypercorn = "*"
PyJWT = "*"
ujson = "*"
pytz = "*"
black = "*"
pytest-vcr = "*"
python-dotenv = "*"
immudb-py = "*"
uvloop = "*"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
